--- a/index.html
+++ b/index.html
@@ -1,16 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
+
 <body>
     <!-- Exchange Rate Section -->
 
-    <div class="flex justify-center">
-        <p>Hello World!</p>
+    <div class="bg-black h-[100%]">
+        <div class="flex justify-center">
+            <div class="font-bold text-[30px] mt-5 text-white ">
+                <p>Exchange Rate</p>
+            </div>
+        </div>
+            <div class="flex justify-center">
+                <table class="w-[60vw] border-collapse text-left">
+                    <thead>
+                        <tr class="bg-orange-500 text-white">
+                            <th class="p-4 font-semibold">Country</th>
+                            <th class="p-4 font-semibold">Currency</th>
+                            <th class="p-4 font-semibold">Payment Type</th>
+                            <th class="p-4 font-semibold">Exchange Rate</th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        <tr class="odd:bg-white even:bg-gray-100">
+                            <td class="p-4 flex items-center gap-2">
+                                <img src="Flag_of_Pakistan.svg.png" alt="" class=" rounded-4xl h-8 w-8" />
+                                Pakistan
+                            </td>
+                            <td class="p-4">PKR</td>
+                            <td class="p-4">Special Promotional Rate for Account Deposit Under AUD 400</td>
+                            <td class="p-4 font-semibold">188.55</td>
+                        </tr>
+
+                        <tr class="odd:bg-white even:bg-gray-100">
+                            <td class="p-4 flex items-center gap-2">
+                                
+                            </td>
+                            <td class="p-4">PKR</td>
+                            <td class="p-4">Account Deposit Above AUD 400</td>
+                            <td class="p-4 font-semibold">186.10</td>
+                        </tr>
+
+                        
+                    </tbody>
+                </table>
+
+            </div>
+        </div>
     </div>
 </body>
-</html>
+
+</html>`
