--- a/index.html
+++ b/index.html
@@ -7,80 +7,72 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="bg-[#fdf5ef] flex items-center justify-center min-h-screen p-6">
+<body>
 
-    <div class="bg-white rounded-2xl shadow-md w-full max-w-5xl overflow-hidden">
+    <!-- Exchange Rate Section -->
 
-        <!-- Header -->
-        <div
-            class="grid grid-cols-4 bg-orange-500 text-white font-bold font-[calibri] py-6 px-6 text-center text-[21px]">
-            <div>COUNTRY</div>
-            <div>CURRENCY</div>
-            <div>PAYMENT TYPE</div>
-            <div>EXCHANGE RATE</div>
-        </div>
+    <div class="bg-[#fdf5ef] flex items-center justify-center min-h-screen p-6">
+        <div class="bg-white rounded-2xl shadow-md w-full max-w-4xl overflow-hidden">
+            <div
+                class="grid grid-cols-[200px_150px_1fr_230px] bg-orange-500 text-white font-bold font-[calibri] py-6 px-0 text-center text-[21px]">
+                <div>COUNTRY</div>
+                <div>CURRENCY</div>
+                <div>PAYMENT TYPE</div>
+                <div>EXCHANGE RATE</div>
+            </div>
 
-        <!-- Table -->
-        <div class="grid grid-cols-4">
+            <div class="grid grid-cols-[200px_150px_1fr_230px]">
 
-            <!-- Country Column -->
-            <div class="border-r border-gray-200 row-span-6 flex justify-center items-start p-4">
-                <div class="flex items-center gap-3">
-                    <img src="Flag_of_Pakistan.svg.png" class="w-10 h-10 rounded-full border" alt="Pakistan">
-                    <span class="text-gray-700 text-lg font-medium">Pakistan</span>
+                <div class="border-r border-gray-200 row-span-6 flex justify-center items-start p-4 ">
+                    <div class="flex items-center gap-3">
+                        <img src="Flag_of_Pakistan.svg.png" class="w-8 h-8 my-2 rounded-full border" alt="Pakistan">
+                        <span class="text-gray-700 text-lg font-medium">Pakistan</span>
+                    </div>
                 </div>
-            </div>
 
-            <!-- Currency Column -->
-            <div class="border-r border-gray-200 row-span-6 flex items-start p-6">
-                <span class="text-gray-700 text-lg font-medium">PKR</span>
-            </div>
+                <div class="border-r border-gray-200 row-span-6 flex items-start justify-center p-6 ">
+                    <span class="text-gray-700 text-lg font-medium">PKR</span>
+                </div>
 
-            <!-- Payment Type & Exchange Rate -->
+                <div class="p-6 bg-gray-100 border-r border-gray-200">
+                    <p class="text-gray-800 font-medium">
+                        Special Promotional Rate for Account Deposit Under AUD 400
+                    </p>
+                </div>
+                <div class="p-6 bg-gray-100 font-semibold text-gray-800 text-lg text-center">188.55</div>
 
-            <!-- Row 1 -->
-            <div class="p-6 bg-gray-100 border-r border-gray-200">
-                <p class="text-gray-800 font-medium">
-                    Special Promotional Rate for Account Deposit Under AUD 400
-                </p>
-            </div>
-            <div class="p-6 bg-gray-100 font-semibold text-gray-800 text-lg">188.55</div>
+                <div class="p-6 border-r border-gray-200">
+                    <p class="text-gray-800 font-medium">
+                        Account Deposit Above AUD 400
+                    </p>
+                </div>
+                <div class="p-6 font-semibold text-gray-800 text-lg text-center">186.10</div>
 
-            <!-- Row 2 -->
-            <div class="p-6 border-r border-gray-200">
-                <p class="text-gray-800 font-medium">
-                    Account Deposit Above AUD 400
-                </p>
-            </div>
-            <div class="p-6 font-semibold text-gray-800 text-lg">186.10</div>
+                <div class="p-6 bg-gray-100 border-r border-gray-200">
+                    <p class="text-gray-800 font-medium">ROSHAN Digital Account</p>
+                </div>
+                <div class="p-6 bg-gray-100 font-semibold text-gray-800 text-lg text-center">186.00</div>
 
-            <!-- Row 3 -->
-            <div class="p-6 bg-gray-100 border-r border-gray-200">
-                <p class="text-gray-800 font-medium">ROSHAN Digital Account</p>
-            </div>
-            <div class="p-6 bg-gray-100 font-semibold text-gray-800 text-lg">186.00</div>
+                <div class="p-6 border-r border-gray-200">
+                    <p class="text-gray-800 font-medium">Cash Payment</p>
+                </div>
+                <div class="p-6 font-semibold text-gray-800 text-lg text-center">186.00</div>
 
-            <!-- Row 4 -->
-            <div class="p-6 border-r border-gray-200">
-                <p class="text-gray-800 font-medium">Cash Payment</p>
-            </div>
-            <div class="p-6 font-semibold text-gray-800 text-lg">186.00</div>
+                <div class="p-6 bg-gray-100 border-r border-gray-200">
+                    <p class="text-gray-800 font-medium">Sada Pay</p>
+                </div>
+                <div class="p-6 bg-gray-100 font-semibold text-gray-800 text-lg text-center">186.00</div>
 
-            <!-- Row 5 -->
-            <div class="p-6 bg-gray-100 border-r border-gray-200">
-                <p class="text-gray-800 font-medium">Sada Pay</p>
-            </div>
-            <div class="p-6 bg-gray-100 font-semibold text-gray-800 text-lg">186.00</div>
+                <div class="p-6 border-r border-gray-200">
+                    <p class="text-gray-800 font-medium">NayaPay</p>
+                </div>
+                <div class="p-6 font-semibold text-gray-800 text-lg text-center">186.00</div>
 
-            <!-- Row 6 -->
-            <div class="p-6 border-r border-gray-200">
-                <p class="text-gray-800 font-medium">NayaPay</p>
             </div>
-            <div class="p-6 font-semibold text-gray-800 text-lg">186.00</div>
 
         </div>
-
     </div>
+
 
 </body>
 
