--- a/index.html
+++ b/index.html
@@ -11,17 +11,22 @@
 
     <!-- Exchange Rate Section -->
 
-    <div class="bg-[#fdf5ef] flex items-center justify-center min-h-screen p-6">
-        <div class="bg-white rounded-2xl shadow-md w-full max-w-4xl overflow-hidden">
+    <div class="flex justify-center mt-10 font-bold text-4xl">
+        <h2>Exchange Rate</h2>
+    </div>
+
+    <div class="bg-[linear-gradient(90deg,rgba(255,255,255,1)_0%,rgba(255,255,255,1)_45%,rgba(255,255,255,1)_50%,rgba(255,219,212,1)_83%,rgba(247,187,173,1)_100%)] flex items-center justify-center p-6">
+
+        <div class="bg-white rounded-2xl shadow-md w-full max-w-5xl overflow-hidden">
             <div
-                class="grid grid-cols-[200px_150px_1fr_230px] bg-orange-500 text-white font-bold font-[calibri] py-6 px-0 text-center text-[21px]">
+                class="grid grid-cols-[200px_150px_1fr_280px] bg-[rgb(237_98_2)] border-[2px] border-[rgb(255_140_0)]  text-white font-bold font-[calibri] py-6 px-0 text-center text-[21px]">
                 <div>COUNTRY</div>
                 <div>CURRENCY</div>
                 <div>PAYMENT TYPE</div>
                 <div>EXCHANGE RATE</div>
             </div>
 
-            <div class="grid grid-cols-[200px_150px_1fr_230px]">
+            <div class="grid grid-cols-[200px_150px_1fr_280px] text-lg">
 
                 <div class="border-r border-gray-200 row-span-6 flex justify-center items-start p-4 ">
                     <div class="flex items-center gap-3">
@@ -39,34 +44,34 @@
                         Special Promotional Rate for Account Deposit Under AUD 400
                     </p>
                 </div>
-                <div class="p-6 bg-gray-100 font-semibold text-gray-800 text-lg text-center">188.55</div>
+                <div class="p-6 bg-gray-100 font-bold text-gray-800 text-lg text-center">188.55</div>
 
                 <div class="p-6 border-r border-gray-200">
                     <p class="text-gray-800 font-medium">
                         Account Deposit Above AUD 400
                     </p>
                 </div>
-                <div class="p-6 font-semibold text-gray-800 text-lg text-center">186.10</div>
+                <div class="p-6 font-bold text-gray-800 text-lg text-center">186.10</div>
 
                 <div class="p-6 bg-gray-100 border-r border-gray-200">
                     <p class="text-gray-800 font-medium">ROSHAN Digital Account</p>
                 </div>
-                <div class="p-6 bg-gray-100 font-semibold text-gray-800 text-lg text-center">186.00</div>
+                <div class="p-6 bg-gray-100 font-bold text-gray-800 text-lg text-center">186.00</div>
 
                 <div class="p-6 border-r border-gray-200">
                     <p class="text-gray-800 font-medium">Cash Payment</p>
                 </div>
-                <div class="p-6 font-semibold text-gray-800 text-lg text-center">186.00</div>
+                <div class="p-6 font-bold text-gray-800 text-lg text-center">186.00</div>
 
                 <div class="p-6 bg-gray-100 border-r border-gray-200">
                     <p class="text-gray-800 font-medium">Sada Pay</p>
                 </div>
-                <div class="p-6 bg-gray-100 font-semibold text-gray-800 text-lg text-center">186.00</div>
+                <div class="p-6 bg-gray-100 font-bold text-gray-800 text-lg text-center">186.00</div>
 
                 <div class="p-6 border-r border-gray-200">
                     <p class="text-gray-800 font-medium">NayaPay</p>
                 </div>
-                <div class="p-6 font-semibold text-gray-800 text-lg text-center">186.00</div>
+                <div class="p-6 font-bold text-gray-800 text-lg text-center">186.00</div>
 
             </div>
 
